--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,11 @@
   </head>
   <body ng-app="lunchFrontendApp" ng-controller="MainCtrl as ctrl">
 
-      <div id="main" ng-view></div>
+      <div>
+        <h1>Dagens</h1>
+      </div>
+
+      <div class="main" ng-view></div>
 
     </div>
 
