Add Open Sans font; update css

--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,12 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="styles/main.css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body ng-app="lunchFrontendApp" ng-controller="MainCtrl as ctrl">
 
       <div>
-        <h1>Dagens</h1>
+        <h1>Dagens lunch</h1>
       </div>
 
       <div class="main" ng-view></div>
