Add footer links to GitHub

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,12 @@
 
       <div class="main" ng-view></div>
 
+      <footer class="links">
+        <img src="images/GitHub.png" alt="GitHub logo">
+        <a href="https://github.com/cfj/lunch-menu-scraper">Scraper</a> |
+        <a href="https://github.com/cfj/lunch-menu-frontend">Frontend</a>
+      </footer>
+
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
