Remove ng-controller directive from body

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   </head>
-  <body ng-app="lunchFrontendApp" ng-controller="MainCtrl as ctrl">
+  <body ng-app="lunchFrontendApp">
 
       <div>
         <h1>Dagens lunch</h1>
