--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,8 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body ng-app="lunchFrontendApp" ng-controller="MainCtrl as vm">
-
+    <div class="container">
+    
       <div>
         <h1>Dagens lunch</h1>
       </div>
