--- a/app/index.html
+++ b/app/index.html
@@ -10,14 +10,14 @@
   </head>
   <body ng-app="lunchFrontendApp" ng-controller="MainCtrl as vm">
     <div class="container">
-    
+
       <div>
         <h1>Dagens lunch</h1>
       </div>
 
       <div class="main" ng-view></div>
 
-      <footer class="links">
+      <footer>
           <div class="last-updated">
               Senast uppdaterad {{vm.lastUpdated | date : 'yyyy-MM-dd'}}
           </div>
