--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="styles/main.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body ng-app="lunchFrontendApp" ng-controller="MainCtrl as vm">
     <div class="container">
