--- a/app/index.html
+++ b/app/index.html
@@ -12,11 +12,7 @@
   <body ng-app="lunchFrontendApp" ng-controller="MainCtrl as vm">
     <div class="container">
 
-      <div>
-        <h1>Dagens lunch</h1>
-      </div>
-
-      <div class="main" ng-view></div>
+      <div ng-view></div>
 
       <footer>
           <div class="last-updated" ng-hide="vm.isWeekend">
