--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="styles/main.css">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body ng-app="lunchFrontendApp" ng-controller="MainCtrl as vm">
@@ -21,7 +21,7 @@
           <div class="github">
             <img src="images/GitHub.png" alt="GitHub logo">
             <a href="https://github.com/cfj/lunch-menu-scraper">Scraper</a> |
-            <a href="https://github.com/cfj/lunch-menu-frontend">Frontend</a>  
+            <a href="https://github.com/cfj/lunch-menu-frontend">Frontend</a>
           </div>
       </footer>
 
